--- a/Web/.htaccess
+++ b/Web/.htaccess
@@ -1,7 +1,10 @@
 RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(admin) backend.php/$1 [L]
+RewriteRule ^(admin.*) backend.php/$1 [L]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(swagger) swagger/index.html
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*) frontend.php/$1 [L]
